--- a/style.css
+++ b/style.css
@@ -11,7 +11,16 @@
 nav {
   position: relative;
 }
-p,a,h1,h2,h3,strong,li,ul{font-family: serif;}
+p,
+a,
+h1,
+h2,
+h3,
+strong,
+li,
+ul {
+  font-family: serif;
+}
 html {
   scroll-behavior: smooth; /* Включает плавную прокрутку */
 }
@@ -289,7 +298,11 @@ ul.menu li.active::before {
 }
 
 @keyframes bounce {
-  0%, 20%, 50%, 80%, 100% {
+  0%,
+  20%,
+  50%,
+  80%,
+  100% {
     transform: translateY(0);
   }
   40% {
